--- a/react-api/src/Sass/global.scss
+++ b/react-api/src/Sass/global.scss
@@ -9,3 +9,11 @@ body {
   background-color: black;
   color: white
 }
+
+.index {
+    margin: auto;
+    width: 50%;
+    border: 3px solid green;
+    padding: 200px 10px 10px 10px;
+
+}
